// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render OptionModal correctly with no option 1`] = `
<Modal
  ariaHideApp={false}
  bodyOpenClassName="ReactModal__Body--open"
  className="modal"
  closeTimeoutMS={200}
  contentLabel="Selected Option"
  isOpen={false}
  onRequestClose={[Function]}
  parentSelector={[Function]}
  portalClassName="ReactModalPortal"
  shouldCloseOnEsc={true}
  shouldCloseOnOverlayClick={true}
  shouldFocusAfterRender={true}
  shouldReturnFocusAfterClose={true}
>
  <h3
    className="modal__title"
  >
    Selected Option
  </h3>
  <button
    className="button"
    onClick={[Function]}
  >
    Okay
  </button>
</Modal>
`;

exports[`should render OptionModal correctly with option 1`] = `
<Modal
  ariaHideApp={false}
  bodyOpenClassName="ReactModal__Body--open"
  className="modal"
  closeTimeoutMS={200}
  contentLabel="Selected Option"
  isOpen={true}
  onRequestClose={[Function]}
  parentSelector={[Function]}
  portalClassName="ReactModalPortal"
  shouldCloseOnEsc={true}
  shouldCloseOnOverlayClick={true}
  shouldFocusAfterRender={true}
  shouldReturnFocusAfterClose={true}
>
  <h3
    className="modal__title"
  >
    Selected Option
  </h3>
  <p
    className="modal__body"
  >
    Buy a car
  </p>
  <button
    className="button"
    onClick={[Function]}
  >
    Okay
  </button>
</Modal>
`;
